--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,9 @@
 services:
   - name: ollama-api
-    type: web
     env: docker
-    plan: free
-    disk:
-      name: ollama-storage
-      sizeGB: 10
-    envVars:
-      - key: PORT
-        value: "11434"
+    plan: free  # Change to "starter" or "pro" if needed
+    dockerCommand: "ollama serve -host 0.0.0.0"
+    ports:
+      - 11434
+    healthCheckPath: "/"  # Optional: Helps Render check if your service is running
+    autoDeploy: true  # Optional: Auto deploy when you push changes
